--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,14 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# Output of go build
+BarkDetector
+
+# Output of command
+*.wav
+
+# Vim and IDE
+*.sw*
+.idea
+.project
